--- a/Kor/Shadowrocket/kor_clear.conf
+++ b/Kor/Shadowrocket/kor_clear.conf
@@ -1,4 +1,4 @@
-# 缓存清理: 2019-10-18
+# 书生缓存清理: 2019-10-18
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
@@ -7,8 +7,10 @@ dns-server = system, 114.114.114.114, 112.124.47.27, 8.8.8.8, 8.8.4.4
 
 
 [Rule]
-//N社地址走直连
-DOMAIN-SUFFIX,nexon.com,DIRECT
+DOMAIN,log.ngsm.nexon.com,DIRECT,script-filter
+DOMAIN,config.na.nexon.com,DIRECT,script-filter
+DOMAIN,m-api.nexon.com,DIRECT,script-filter
+DOMAIN,api.ngsm.nexon.com,DIRECT,script-filter
 DOMAIN-KEYWORD,google,PROXY,force-remote-dns
 DOMAIN-KEYWORD,facebook,PROXY,force-remote-dns
 DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
@@ -303,10 +305,9 @@ FINAL,PROXY
 localhost = 127.0.0.1
 
 [URL Rewrite]
-^http:\/\/mm-staticweb.s3.amazonaws.com/MarketVersions/KoreaLiveMarketVersion.xml.*? https://raw.githubusercontent.com/MapleRen/MapleStoryM-language/master/xml/mod_version.xml header
-^http:\/\/nxm-maplem.akamaized.net\/AppStore\/.*?AssetBundle.xml http://nxm-maplem.akamaized.net/AppStore/145_865Q/6SiEpijO6AJCkg5h9tkOYkko9ZsorZIyr9Q/6SiEpij@mmb@AssetBundle.xml header
-^http:\/\/nxm-maplem.akamaized.net\/AppStore\/.*?AssetBundle_table.xml https://raw.githubusercontent.com/MapleRen/MapleStoryM-language/master/xml/AssetBundle_table.xml header
-
-^http:\/\/nxm-maplem.akamaized.net\/AppStore\/.*?data.table.unity3d http://nxm-maplem.akamaized.net/AppStore/145_865Q/6SiEpijO6AJCkg5h9tkOYkko9ZsorZIyr9Q/6SiEpij@mmb@data.table.unity3d header
-^http:\/\/nxm-maplem.akamaized.net\/AppStore\/.*?data.bin.lan.kor.tbl http://nxm-maplem.akamaized.net/AppStore/145_865Q/6SiEpijO6AJCkg5h9tkOYkko9ZsorZIyr9Q/6SiEpij@mmb@data.bin.lan.kor.tbl header
-^http:\/\/nxm-maplem.akamaized.net\/AppStore\/.*?data.language_kor.unity3d http://nxm-maplem.akamaized.net/AppStore/145_865Q/6SiEpijO6AJCkg5h9tkOYkko9ZsorZIyr9Q/6SiEpij@mmb@data.language_kor.unity3d header
+^http:\/\/mm-staticweb.s3.amazonaws.com/MarketVersions/KoreaLiveMarketVersion.xml.*? https://tz.xiaobudianmzw.com/docs/xml/mod_version.xml header
+^http:\/\/nxm-maplem.akamaized.net\/AppStore\/.*?AssetBundle.xml https://tz.xiaobudianmzw.com/docs/AssetBundle.xml header
+^http:\/\/nxm-maplem.akamaized.net\/AppStore\/.*?AssetBundle_table.xml https://tz.xiaobudianmzw.com/docs/AssetBundle_table.xml header
+^http:\/\/nxm-maplem.akamaized.net\/AppStore\/.*?data.table.unity3d http://nxm-maplem.akamaized.net/AppStore/145_867Q/6SiEpijO6AJCkg5h9tkOYkko9ZsorZIyr9Q/6SiEpij@mmb@data.table.unity3d header
+^http:\/\/nxm-maplem.akamaized.net\/AppStore\/.*?data.bin.lan.kor.tbl http://nxm-maplem.akamaized.net/AppStore/145_867Q/6SiEpijO6AJCkg5h9tkOYkko9ZsorZIyr9Q/6SiEpij@mmb@data.bin.lan.kor.tbl header
+^http:\/\/nxm-maplem.akamaized.net\/AppStore\/.*?data.language_kor.unity3d http://nxm-maplem.akamaized.net/AppStore/145_867Q/6SiEpijO6AJCkg5h9tkOYkko9ZsorZIyr9Q/6SiEpij@mmb@data.language_kor.unity3d header
